# PPMIO

./: CMakeLists.txt  README.md  ppm_io_demo.cpp
libs/: CMakeLists.txt  ppm_io.cpp  ppm_io.h
samples/: README.md  giraffe.ppm  giraffe_p3_replicated.ppm  kangaroo_p6_replicated.ppm  portrait_p3_comment.ppm  portrait_p3_comment_replicated.ppm  water-mill_p6_comment.ppm  water-mill_p6_comment_replicated.ppm
